--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- ------------------------------------------------------------------------------------------ -->
+    <script defer="defer" src="/static/js/main.05257706.js"></script>
+    <link href="/static/css/main.b3e24299.css" rel="stylesheet">
+    <!-- ------------------------------------------------------------------------------------------ -->
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
