--- a/public/index.html
+++ b/public/index.html
@@ -47,5 +47,5 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"
   ></script>
-  <script src="./disableInspect.js" ></script>
+  <!-- <script src="./disableInspect.js" ></script> -->
 </html>
